--- a/old_index.html
+++ b/old_index.html
@@ -24,7 +24,7 @@
         .image-container {
             text-align: center;
             margin-bottom: 20px;
-            max-width: 80vw; /* Adjusts width to viewport */
+            max-width: 95vw; /* Adjusts width to viewport */
             background-color: lightblue; /* Initial background color */
             transition: background-color 0.3s, height 0.3s; /* Smooth transition for color change */
             overflow: hidden; /* Hide the overflow content */
@@ -46,8 +46,8 @@
             padding: 20px;
             overflow-y: auto;
             overflow-x: hidden; /* Prevent horizontal scrolling */
-            max-height: 60vh;
-            width: 60vw;
+            max-height: 56vh;
+            width: 95vw;
             background-color: #222222;
             border-radius: 15px;
             box-shadow: 0 5px 15px rgba(0, 0, 0, 0.5);
@@ -104,11 +104,11 @@
 
 <body>
     <div class="image-container" id="imageContainer">
-        <img src="OWR_1-1.png" alt="Overworld Radio Image" />
+        <img src="BS_1-1.png" alt="Backup Strats Image" />
     </div>
 
     <div id="contentArea">
-        <h1>Overworldrad.io is moving to BackupStrats.com</h1>
+        <h1>BackupStrats.com</h1>
         <p>Players, creators and all those who inhabit the world</p>
 
         <p>Today, we stand at a pivotal moment in history, on the brink of a transformation <em>decades</em> in the making. The groundwork is laid, the plans are drawn, and a new era is within our reach: an era where you are not merely participants, but the <strong>architects</strong> of your destiny.</p>
@@ -119,9 +119,9 @@
 
         <p>Now, we seek the best and most dedicated engineers and artists to join us. Your skills, passion, and creativity are essential in solidifying the work that is ready for production. Together, we will shape this new era, turning vision into reality.</p>
 
-        <p>This call is not just for participation, but for commitment to a cause greater than ourselves, a cause where each one of us can contribute to a future where we all stand as <strong>free men and women</strong>, paramount in our own lives.</p>
+        <p>This call is not just for participation, but for commitment to a cause greater than ourselves, a cause where each one of us can contribute to a future where we all stand as <strong>free players and creators</strong>, paramount in our own lives.</p>
 
-        <p>Welcome to the future... Come back home to Overworld Radio</p>
+        <p>Welcome to the future... a secret mention to Overworld Radio.</p>
         
         <hr>
         <div class="contact-info">
