--- a/index.html
+++ b/index.html
@@ -148,11 +148,11 @@
 
   <div id="mainContent">
     <h1 class="ominous-text">Overworld Radio</h1>
-    <p class="subtitle">Coming very soon</p>
-    <p>Moving to BackupStrats.com </p>
+    <p class="subtitle">A New Realm Awaits</p>
+    <p>Relocating to BackupStrats.com</p>
     <input type="text" id="api-key">
     <br>
-    <button onclick="activateAPI()">Activate</button>
+    <button onclick="activateAPI()">What is this?</button>
     <button onclick="window.location.href='old_index.html'">Enter if You Dare</button>
   </div>
 
@@ -161,7 +161,7 @@
 
   <script>
     function activateAPI() {
-      alert('Activated. BackupStrats.com...');
+      alert('Welcome to BackupStrats.com... Please click "Enter if you Dare" to proceed');
     }
 
     function generateRandomPosition() {
